Added new user functionality

--- a/src/app/components/add-new-book/add-new-book.component.html
+++ b/src/app/components/add-new-book/add-new-book.component.html
@@ -6,7 +6,13 @@
 			<md-grid-list cols="4" rowHeight="60px">
 				<md-grid-tile [colspan]="4" [rowspan]="1">
 					<md-input-container>
-						<input mdInput id="title" type="text" required [(ngModel)]="newBook.title" name="title" placeholder="Title">
+						<input mdInput
+							   id="title"
+							   type="text"
+                               required
+                               [(ngModel)]="newBook.title"
+                               name="title"
+                               placeholder="Title">
 					</md-input-container>
 				</md-grid-tile>
 			</md-grid-list>
@@ -119,8 +125,7 @@
 			</md-grid-list>
 		</form>
 	</div>
-	<div class="row" [hidden]="!bookAdded"
-	>
+	<div class="row" [hidden]="!bookAdded">
 		<h3>Book added successfully!</h3>
 	</div>
 </div>
