--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -4,6 +4,7 @@
     <span [hidden]="!loggedIn"><a md-button routerLink="/userList">View User List</a></span>
     <span [hidden]="!loggedIn"><a md-button routerLink="/bookList">View Book List</a></span>
     <span [hidden]="!loggedIn"><a md-button routerLink="/addNewBook">Add a Book</a></span>
+    <span [hidden]="!loggedIn"><a md-button routerLink="/addNewUser">Add a User</a></span>
     <span [hidden]="!loggedIn"><a md-button (click)="logout()">Logout</a></span>
 
 </md-toolbar>
